--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="{% static "datastream/moment/moment.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/assert/assert.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/highstock/highstock.js" %}"></script>
+        <script type="text/javascript" src="{% static "datastream/highstock/highcharts-more.js" %}"></script>
         <script type="text/javascript" src="{% static "test_app/code.js" %}"></script>
     </head>
     <body>
