--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="{% static "test_app/style.css" %}" media="screen"/>
         <script type="text/javascript" src="{% static "datastream/jquery/jquery.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/moment/moment.js" %}"></script>
+        <script type="text/javascript" src="{% static "datastream/async/async.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/assert/assert.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/highstock/highstock.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/highstock/highcharts-more.js" %}"></script>
