--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -5,6 +5,7 @@
         <title>Datastream Test</title>
         <link rel="stylesheet" type="text/css" href="{% static "test_app/style.css" %}" media="screen"/>
         <script type="text/javascript" src="{% static "datastream/jquery/jquery.js" %}"></script>
+        <script type="text/javascript" src="{% static "datastream/underscore/underscore.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/moment/moment.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/async/async.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/assert/assert.js" %}"></script>
