Renamed plot to chart to match Highstock terminology.

--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -20,8 +20,8 @@
             <h2>Available Streams</h2>
             <ul id="streams"></ul>
 
-            <h2>Plot</h2>
-            <div id="plot"></div>
+            <h2>Chart</h2>
+            <div id="chart"></div>
         </div>
     </body>
 </html>
