Refactored code to use objects and multiple charts.

--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -16,12 +16,7 @@
     <body>
         <div id="content">
             <h1>Datastream Test</h1>
-
-            <h2>Available Streams</h2>
-            <ul id="streams"></ul>
-
-            <h2>Chart</h2>
-            <div id="chart"></div>
+            <div id="charts"></div>
         </div>
     </body>
 </html>
