Added exporting file to demo.

--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="{% static "datastream/assert/assert.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/highstock/highstock.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/highstock/highcharts-more.js" %}"></script>
+        <script type="text/javascript" src="{% static "datastream/highstock/exporting.js" %}"></script>
         <script type="text/javascript" src="{% static "test_app/code.js" %}"></script>
     </head>
     <body>
