--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="{% static "datastream/highstock/highstock.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/highstock/highcharts-more.js" %}"></script>
         <script type="text/javascript" src="{% static "datastream/highstock/exporting.js" %}"></script>
+        <script type="text/javascript" src="{% static "datastream/js/datastream.js" %}"></script>
         <script type="text/javascript" src="{% static "test_app/code.js" %}"></script>
     </head>
     <body>
