New version of datastream JS code.

--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -18,7 +18,9 @@
     <body>
         <div id="content">
             <h1>Datastream Test</h1>
-            <div id="charts"></div>
+            <div id="charts">
+                <p class="loading">Loading...</p>
+            </div>
         </div>
     </body>
 </html>
